<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.courtcounter.MainActivity">

        <LinearLayout style="@style/main_lay">

            <LinearLayout style="@style/laylay">

                <TextView
                    style="@style/nazwa_druzyny"
                    android:text="@string/nazwa_druzyny_A" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/score"
                    android:text="@string/initial_score" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamAByThree"
                    android:text="@string/trzy_punkty" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamAByTwo"
                    android:text="@string/dwa_punkty" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamAByOne"
                    android:text="@string/rzut_wolny" />

            </LinearLayout>

            <TextView style="@style/line_style" />

            <LinearLayout style="@style/laylay">

                <TextView
                    style="@style/nazwa_druzyny"
                    android:text="@string/nazwa_druzyny_B" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/score"
                    android:text="@string/initial_score" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamBByThree"
                    android:text="@string/trzy_punkty" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamBByTwo"
                    android:text="@string/dwa_punkty" />

                <Button
                    style="@style/przyciski"
                    android:onClick="addTeamBByOne"
                    android:text="@string/rzut_wolny" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_score"
            style="@style/reset_button"
            android:onClick="scoreReset"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>
